welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: not found: value int
  int high = Math.max(a,b);
  ^lessBy10:3: error: not found: value high
  high = Math.max(high, c);
  ^lessBy10:5: error: not found: value high
  if (high - a >= 10 || high - b >= 10 || high - c >=10)
      ^