welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
  int high = Math.max(a,b);
  high = Math.max(high, c);
  
  if (high - a >= 10 || high - b >= 10 || high - c >=10)
    return true;
  else 
    return false;
}